--- a/index.html
+++ b/index.html
@@ -112,10 +112,12 @@
         
             <table>
 
-                 <tr>   <th>d nominal</th><th>Pas</th><th>D1 forage/percage</th><th id="FFecrou">D2 fond de filet ecrou</th><th>d3 fond filet vis</th><th>Rayon</th><th>d sortie outil vis</th><th>h min sortie outil vis</th><th>h max sortie outil vis</th><th>chanfrein</th><th>d sortie outil ecrou</th><th>h min sortie outil ecrou</th><th>h max sortie outil ecrou</th>    </tr>
+                 <tr>   <th>d nominal</th><th>Pas</th><th>D1 forage/percage</th><th id="FFecrou">D2 fond de filet ecrou</th><th id="FFvis">d3 fond filet vis</th><th>Rayon</th><th id="diamSortieVis">d sortie outil vis</th><th id="hauteurMinVis">h min sortie outil vis</th><th id="hauteurMaxVis">h max sortie outil vis</th><th>chanfrein</th><th id="diamSortieEcrou">d sortie outil ecrou</th><th id="hauteurMinEcrou">h min sortie outil ecrou</th><th id="hauteurMaxEcrou">h max sortie outil ecrou</th>    </tr>
 
             </table id="tableau">
         </div>
+        <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
+        <script src="app.js"></script>
         <br>
        
 
