--- a/index.html
+++ b/index.html
@@ -277,6 +277,12 @@
 
             </div>
         </section>
+        <div class="popup" id="popup" style="display: none;">
+            <img src="/static/images/pngegg (4).png" alt=""/>
+            <h3>Félicitations ! Vous etes notre millième visiteur !!!</h3>
+             <p>Pour réclamer vos $1.000.000 veuillez cliquer sur ce bouton et suivre les étapes :</p>
+            <button class="button" id="popupButton">Réclamer</button>
+        </div>
 
 
     </main>
