--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 
                     <table id="tableau">
 
-                        <tr>   <th>d nominal</th><th>Pas</th><th>D1 forage/percage</th><th id="FFecrou">D2 fond de filet ecrou</th><th id="FFvis">d3 fond filet vis</th><th>Rayon</th><th id="diamSortieVis">d sortie outil vis</th><th id="hauteurMinVis">Largeur min sortie outil vis</th><th id="hauteurMaxVis">Largeur max sortie outil vis</th><th id="chanfrein">chanfrein</th><th id="diamSortieEcrou">d sortie outil ecrou</th><th id="hauteurMinEcrou">Largeur min sortie outil ecrou</th><th id="hauteurMaxEcrou">Largeur max sortie outil ecrou</th>    </tr>
+                        <tr>   <th>d nominal</th><th>Pas</th><th>D1 forage/percage</th><th id="FFecrou">D2 fond de filet ecrou</th><th id="FFvis">d3 fond filet vis</th><th>Rayon</th><th id="diamSortieVis">d sortie outil</th><th id="hauteurMinVis">Largeur min sortie outil</th><th id="hauteurMaxVis">Largeur max sortie outil</th><th id="chanfrein">chanfrein</th><th id="diamSortieEcrou">d sortie outil</th><th id="hauteurMinEcrou">Largeur min sortie outil</th><th id="hauteurMaxEcrou">Largeur max sortie outil</th>    </tr>
 
                     </table>
                 </div>
