--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
             <div class="container">
                     <h4 id="errorMessage"></h4>
                 <div id="resultatTableau" style="display:none;">
-                    <h4>Voici les différentes vis qui sont compatibles</h4>
+                    <h4>Voici les différents éléments qui sont compatibles</h4>
                 
                     <table id="tableau">
 
-                        <tr>   <th>d nominal</th><th>Pas</th><th>D1 forage/percage</th><th id="FFecrou">D2 fond de filet ecrou</th><th id="FFvis">d3 fond filet vis</th><th>Rayon</th><th id="diamSortieVis">d sortie outil vis</th><th id="hauteurMinVis">Largeur min sortie outil vis</th><th id="hauteurMaxVis">Largeur max sortie outil vis</th><th id="chanfrein">chanfrein</th><th id="diamSortieEcrou">d sortie outil ecrou</th><th id="hauteurMinEcrou">Largeur min sortie outil ecrou</th><th id="hauteurMaxEcrou">Largeur max sortie outil ecrou</th>    </tr>
+                        <tr>   <th>d nominal</th><th>Pas</th><th>D1 forage/percage</th><th id="FFecrou">D2 fond de filet ecrou</th><th id="FFvis">d3 fond filet vis</th><th>Rayon</th><th id="diamSortieVis">d sortie outil</th><th id="hauteurMinVis">Largeur min sortie outil</th><th id="hauteurMaxVis">Largeur max sortie outil</th><th id="chanfrein">chanfrein</th><th id="diamSortieEcrou">d sortie outil</th><th id="hauteurMinEcrou">Largeur min sortie outil</th><th id="hauteurMaxEcrou">Largeur max sortie outil</th>    </tr>
 
                     </table>
                 </div>
@@ -251,7 +251,7 @@
                 </div>
 
                 <div class="info2">
-                    <h3>Réclamations</h3>
+                    <h3>Rapport de Bug</h3>
                     <form>
                         <textarea name="email" id="email" placeholder="message" class="form-element"></textarea>
                         <br>
