--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 
                         <div class="content">
                             <input type="radio" name="filet" id="typeFilet2" value="2"class="radio"/>
-                            <label for="typeFilet2">Filet Whitworth et Gaz</label>
+                            <label for="typeFilet2">Filet Withworth et Gaz</label>
                         </div>
                         <div class="content">
                             <input type="radio" name="filet" id="typeFilet3" value="3"class="radio"/>
@@ -211,7 +211,7 @@
             <div class="container">
                     <h4 id="errorMessage"></h4>
                 <div id="resultatTableau" style="display:none;">
-                    <h4>Voici les différents éléments qui sont compatibles</h4>
+                    <h4>Voici les différentes vis qui sont compatibles</h4>
                 
                     <table id="tableau">
 
