--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <span>des Grammoux</span> 
                     </h1>
                     <h3>Votre aide pour le cours de dessin</h3>
-                    <a href="#introduction" class="button">Get started</a>
+                    <a href="#introduction" class="button">Commençons !</a>
                 </div>
             </section>
         <br><br>
@@ -64,7 +64,10 @@
                             <div class="content">
                                 <h3>Filetage</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consectetur officiis cupiditate eaque temporibus ducimus quibusdam quisquam fugiat deleniti enim. Sit hic quae distinctio laborum earum nihil natus a consequuntur.
+                                    Le filetage est essentiel dans les assemblages vissés, permettant de créer des connexions mécaniques robustes et fiables. 
+                                    Il existe différents types de filetages, chacun ayant des caractéristiques uniques adaptées à des utilisations spécifiques, 
+                                    comme le filetage métrique ISO ou le filetage trapézoïdal. La précision du filetage est cruciale pour garantir l’efficacité 
+                                    de l’assemblage, la tenue aux charges et la résistance aux vibrations.
                                 </p>
                             </div>
                         </div>
@@ -76,7 +79,10 @@
                             <div class="content">
                                 <h3>Elements d'assemblage</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consectetur officiis cupiditate eaque temporibus ducimus quibusdam quisquam fugiat deleniti enim. Sit hic quae distinctio laborum earum nihil natus a consequuntur.
+                                    Les éléments d'assemblage comprennent une large gamme de composants tels que les vis, les écrous, et les rondelles. 
+                                    Ces éléments sont utilisés pour assembler des pièces dans divers environnements industriels et mécaniques, garantissant 
+                                    un maintien sûr et résistant. Les choix de matériaux, les traitements de surface et les dimensions sont sélectionnés 
+                                    pour répondre aux exigences spécifiques de chaque application, assurant ainsi une solidité et une durabilité maximales.
                                 </p>
                             </div>
 
@@ -87,7 +93,11 @@
                             <div class="content">
                                 <h3>Tolérances</h3>
                                 <p>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio consectetur officiis cupiditate eaque temporibus ducimus quibusdam quisquam fugiat deleniti enim. Sit hic quae distinctio laborum earum nihil natus a consequuntur.
+                                    Les tolérances de fabrication définissent les variations dimensionnelles permises dans la production de pièces 
+                                    mécaniques. Elles sont essentielles pour assurer l'interchangeabilité et le bon fonctionnement des assemblages. 
+                                    Des tolérances strictes sont appliquées pour les éléments critiques, tandis que des marges plus larges sont permises 
+                                    pour les composants moins sensibles. Une bonne gestion des tolérances contribue à améliorer la qualité de l'assemblage 
+                                    final tout en réduisant les coûts de production.
                                 </p>
                             </div>
                         </div>
@@ -98,9 +108,25 @@
         <section id="filetage"  class="filetage">
         
             <div class="container">
-                <h2>Filetage</h2>
+                <h2>Calculateur de filetage</h2>
                 <div class="filetText">
-                    <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur repellat perferendis quam suscipit facilis, ad accusantium itaque voluptate rem quia, quasi ea soluta. Odit, distinctio deleniti inventore velit saepe rem Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi perspiciatis quia delectus corrupti quos tenetur a magnam inventore nobis, doloribus pariatur omnis non architecto consequatur, reiciendis sint dolorem consequuntur. Laborum.</h3>
+                    <h3>
+                        Le calculateur de filetage est conçu pour aider les utilisateurs à identifier les caractéristiques optimales des éléments 
+                        d'assemblage, comme les vis et les écrous, en fonction de plusieurs critères. Vous pouvez choisir parmi différents types 
+                        de filetages (ISO métrique, Whitworth, Trapézoïdal, et Rond) et spécifier si l'élément à fileter est une vis ou un écrou.
+                        Ensuite, le calculateur prend en compte les informations suivantes :
+                        <ul>
+                            <li><strong>Diamètre de l'élément :</strong> Vous pouvez indiquer le diamètre nominal de la vis ou de l'écrou non usiné.</li>
+                            <li><strong>Surépaisseur d'usinage :</strong> Ce paramètre permet de calculer le diamètre de filetage final en prenant en 
+                            compte la surépaisseur à enlever.</li>
+                            <li><strong>Longueur de l'élément :</strong> La longueur de la vis ou de l’écrou permet de déterminer le pas maximal du 
+                            filetage pour assurer la résistance nécessaire à l’assemblage.</li>
+                            <li><strong>Type de pas :</strong> Sélectionnez entre "pas gros" ou "pas fin" selon les exigences de précision et de 
+                            solidité de l’assemblage.</li>
+                            <li><strong>Type de production :</strong> Ce paramètre ajuste la précision et les tolérances en fonction du type de production 
+                            souhaité (par exemple, fréquente ou occasionnelle).</li>
+                        </ul>
+                    </h3>
                     <img src="/static/images/undraw_working_re_ddwy.svg" alt="logo" class="logo"/>
                 </div>
 
@@ -215,8 +241,21 @@
                 
                     <table id="tableau">
 
-                        <tr>   <th>d nominal</th><th>Pas</th><th>D1 forage/percage</th><th id="FFecrou">D2 fond de filet ecrou</th><th id="FFvis">d3 fond filet vis</th><th>Rayon</th><th id="diamSortieVis">d sortie outil</th><th id="hauteurMinVis">Largeur min sortie outil</th><th id="hauteurMaxVis">Largeur max sortie outil</th><th id="chanfrein">chanfrein</th><th id="diamSortieEcrou">d sortie outil</th><th id="hauteurMinEcrou">Largeur min sortie outil</th><th id="hauteurMaxEcrou">Largeur max sortie outil</th>    </tr>
-
+                        <tr>   
+                            <th>d nominal</th>
+                            <th>Pas</th>
+                            <th>D1 forage/percage</th>
+                            <th id="FFecrou">D2 fond de filet ecrou</th>
+                            <th id="FFvis">d3 fond filet vis</th>
+                            <th>Rayon</th>
+                            <th id="diamSortieVis">d sortie outil</th>
+                            <th id="hauteurMinVis">Largeur min sortie outil</th>
+                            <th id="hauteurMaxVis">Largeur max sortie outil</th>
+                            <th id="chanfrein">chanfrein</th>
+                            <th id="diamSortieEcrou">d sortie outil</th>
+                            <th id="hauteurMinEcrou">Largeur min sortie outil</th>
+                            <th id="hauteurMaxEcrou">Largeur max sortie outil</th>
+                        </tr>
                     </table>
                 </div>
             </div>
@@ -255,13 +294,12 @@
                     <form>
                         <textarea name="email" id="email" placeholder="message" class="form-element"></textarea>
                         <br>
-                        <input type="submit" value="Send" class="button" id="buttonEmail">
+                        <input type="submit" value="Envoyer" class="button" id="buttonEmail">
                     </form>
                 </div>
 
                 <div class="info3">
                     <h3>Contact</h3>
-                    <p>Quai du Condroz 28 <br>Liège Belgique</p>
                     <div class="icons">
                         <div class="icons1" id="linkedin">
                             <i class="fa-brands fa-linkedin-in"></i>
@@ -269,20 +307,11 @@
                         <div class="icons2" id="github">
                             <i class="fa-brands fa-github"></i>
                         </div>
-                        <div class="icons3" id="paypal">
-                            <i class="fa-brands fa-paypal"></i>
-                        </div>
                     </div>
                 </div>
 
             </div>
         </section>
-        <div class="popup" id="popup" style="display: none;">
-            <img src="/static/images/pngegg (4).png" alt=""/>
-            <h3>Félicitations ! Vous etes notre millième visiteur !!!</h3>
-             <p>Pour réclamer vos $1.000.000 veuillez cliquer sur ce bouton et suivre les étapes :</p>
-            <button class="button" id="popupButton">Réclamer</button>
-        </div>
 
 
     </main>
